fix (naviation panel): nav panel covers the entire inspector, compatibility with LearnDash  (#2227)
* Added top property.

* fix bottom gap

--- a/src/block-components/navigation-view/editor.scss
+++ b/src/block-components/navigation-view/editor.scss
@@ -5,10 +5,11 @@
 
 .stk-navigation-view__wrapper {
 	position: fixed !important;
-	bottom: 26px;
+	bottom: 25px;
 	width: 280px !important;
 	z-index: 9;
 	background: #fafafa;
+	top: revert !important; // Prevents Learndash's styles from conflicting with the mini nav component.
 	.ugb-panel--navigation-view {
 		padding: 0 !important;
 	}
